# radar

./: .clang-format  .drone.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  CPPLINT.cfg  Dockerfile  README.md  Radar.sublime-project  Rakefile  Vagrantfile
.circleci/: config.yml
Applications/PasswordChecker/: CMakeLists.txt
Applications/PasswordChecker/Source/: PasswordChecker.cc
Docs/: .gitignore  Doxyfile  GLOSSARY.md  Makefile  README.md  SUMMARY.md  Style.css  book.json
Docs/Concepts/: README.md
Docs/Core/: README.md
Docs/Recognition/: README.md
Headers/Animation/: Animation.h  AnimationDirector.h  AnimationUtilities.h  Director.h  FrictionSimulation.h  GravitySimulation.h  Interpolator.h  ScrollSimulation.h  Simulation.h  SimulationGroup.h  SpringSimulation.h  SpringSolution.h  TimingCurve.h  Utilities.h
Headers/Bootstrap/: BootstrapServer.h  Server.h
Headers/Compositor/: AnimationDirector.h  Color.h  Compositor.h  CompositorChannel.h  CompositorStatistics.h  CompositorStatisticsRenderer.h  Entity.h  EntityArena.h  EntityLease.h  Frame.h  InterfaceLease.h  Interpolator.h  Layer.h  OpenGL.h  Patch.h  PatchChunk.h  PresentationEntity.h  PresentationGraph.h  PresentationLayer.h  Primitive.h  Program.h  ProgramCatalog.h  RenderSurface.h  TimingCurve.h  TransactionPayload.h  TransferEntity.h  TransferRecord.h
Headers/Coordinator/: AnimationDirector.h  Channel.h  Color.h  Compositor.h  CompositorChannel.h  CompositorStatistics.h  CompositorStatisticsRenderer.h  Coordinator.h  EntityArena.h  EntityLease.h  Frame.h  InterfaceAcquisitionProtocol.h  InterfaceController.h  Interpolator.h  OpenGL.h  PresentationEntity.h  PresentationGraph.h  Primitive.h  Program.h  ProgramCatalog.h  RenderSurface.h  Statistics.h  StatisticsRenderer.h  TimingCurve.h  TransactionPayload.h  TransferEntity.h  TransferRecord.h
Headers/Core/: Allocation.h  Archive.h  Attachment.h  AutoLock.h  Base.h  BootstrapServer.h  Channel.h  ChannelProvider.h  Config.h  Core.h  EventLoop.h  EventLoopObserver.h  EventLoopSource.h  Guard.h  Latch.h  Lock.h  Looper.h  LooperObserver.h  LooperSource.h  Macros.h  Message.h  Namespace.h  Protocol.h  RingBuffer.h  Serializable.h  Server.h  SharedMemory.h  Socket.h  ThreadLocal.h  Time.h  Timing.h  Utilities.h  WaitSet.h  WorkQueue.h
Headers/Event/: Event.h  TouchEvent.h  TouchEventChannel.h
Headers/Geometry/: Geometry.h  Matrix.h  Point.h  Rect.h  Size.h  Vector.h
Headers/Host/: Host.h
Headers/Infrastructure/: StateMachine.h
Headers/Instrumentation/: Counter.h  Instrumentation.h  Stopwatch.h  Trace.h  TraceEvent.h
Headers/Interface/: Action.h  Entity.h  Identifier.h  Interface.h  InterfaceDelegate.h  InterfaceStatistics.h  InterfaceTransaction.h  Layer.h  ModelEntity.h
Headers/Layout/: Constraint.h  ConstraintCreation.h  Expression.h  ExpressionMember.h  Parameter.h  Priority.h  ProxyResolver.h  Result.h  Solver.h  Suggestion.h  Term.h  Variable.h
Headers/Recognition/: ActiveTouchSet.h  Equation.h  GestureRecognizer.h  Polynomial.h  RecognitionEngine.h  Term.h  TouchEntity.h  Variable.h
Headers/Shell/: Shell.h
Headers/Toolbox/: StateMachine.h
Licenses/: Radar.LICENSE  libtess2.LICENSE  sqlite3.LICENSE  stb.LICENSE
RadarLove.xcodeproj/: project.pbxproj
RadarLove.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Samples/: CMakeLists.txt  Sample.cc  Sample.h
Samples/Headers/Samples/: Sample.h
Samples/Source/: Sample.cc
Source/Animation/: AnimationDirector.cc  Director.cc  FrictionSimulation.cc  GravitySimulation.cc  Interpolator.cc  ScrollSimulation.cc  Simulation.cc  SimulationGroup.cc  SpringSimulation.cc  SpringSolution.cc  TimingCurve.cc  Utilities.cc
Source/Bootstrap/: BootstrapServer.cc  InProcessBootstrapServer.cc  MachBootstrapServer.mm  MachServerProvider.h  MachServerProvider.mm  Server.cc  ServerProvider.h  SocketBootstrapServer.cc
Source/Compositor/: AnimationDirector.cc  Color.cc  Color.cpp  Compositor.cc  Compositor.cpp  CompositorChannel.cc  CompositorStatistics.cc  CompositorStatisticsRenderer.cc  Entity.cc  EntityArena.cc  EntityLease.cc  Frame.cc  Frame.cpp  InterfaceLease.cc  Interpolator.cc  Layer.cc  Layer.cpp  OpenGL.cc  Patch.cc  PatchChunk.cc  PresentationEntity.cc  PresentationGraph.cc  PresentationLayer.cc  Primitive.cc  Primitive.cpp  Program.cc  Program.cpp  ProgramCatalog.cc  ProgramCatalog.cpp  RenderSurface.cc  RenderSurface.cpp  TimingCurve.cc  TransactionPayload.cc  TransferEntity.cc  TransferRecord.cc
Source/Coordinator/: AnimationDirector.cc  Channel.cc  Color.cc  Compositor.cc  CompositorChannel.cc  CompositorStatistics.cc  CompositorStatisticsRenderer.cc  Coordinator.cc  EntityArena.cc  EntityLease.cc  Frame.cc  InterfaceAcquisitionProtocol.cc  InterfaceController.cc  Interpolator.cc  OpenGL.cc  PresentationEntity.cc  PresentationGraph.cc  Primitive.cc  Program.cc  ProgramCatalog.cc  RenderSurface.cc  Statistics.cc  StatisticsRenderer.cc  TimingCurve.cc  TransactionPayload.cc  TransferEntity.cc  TransferRecord.cc
Source/Core/: Allocation.cc  Archive.cc  ArchiveDatabase.cc  (+100 more)
Test/: ArchiveTest.mm  AttachmentTest.cc  BootstrapServerTest.mm  BootstrapSocketServerTest.mm  ChannelTest.cc  ChannelTest.cpp  ChannelTest.mm  EntityLeaseTest.cc  EntityLeaseTest.mm  EventLoopObserverTest.cc  EventLoopObserverTest.mm  EventLoopTest.cc  EventLoopTest.mm  InterfaceLeaseTest.cc  LatchTest.cc  LatchTest.cpp  LatchTest.mm  LayerTest.cc  LayoutTest.cc  LayoutTest.mm  LooperTest.cpp  MessageDecoderTest.cc  MessageDecoderTest.cpp  MessageDecoderTest.mm  MessageEncoderTest.cc  MessageEncoderTest.cpp  MessageEncoderTest.mm  NamespaceTest.mm  PipeTrivialSourceTest.cc  PipeTrivialSourceTest.mm  ProtocolTest.mm  RadarTest.h  RecognitionTest.cc  ServerTest.cc  SharedMemoryTest.cc  SharedMemoryTest.mm  SocketBootstrapServerTest.mm  SocketTest.cpp  TestMain.cpp  ThreadLocalTest.cc  (+8 more)
Tools/RIDL/: CMakeLists.txt
Tools/RIDL/Source/: Driver.cc  Driver.h  Lexer.h  Parser.cc  Parser.h  RIDL.l  RLDecls.h  Scanner.cc  Scanner.h
Tools/RIDL/Test/: ParserTest.cc
(+94 files in other folders)
